--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -159,13 +159,29 @@
 \section{PROFESSIONAL\texorpdfstring{\newline}{ }EXPERIENCE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-  \textbf{\href{https://cit-ai.net}{Computer Science and Engineering, City}, UK}
+  \textbf{\href{https://rise.org.cy}{RISE}, Cyprus}
   \begin{outerlist}
-  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
-  \item{CitAI, Artificial Intelligence Research Centre}
+  \item[\textbf{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}]
+  \item[\textit{Researcher}] \hfill \textbf{2019--}
   \end{outerlist}
-  \vspace{10pt}
+  
+  \vspace{15pt}
+  
+
+\textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
+\begin{outerlist}
+  \item[\textbf{\href{https://bradlove.org/}{Prof. Bradley C. Love's Lab}}] 
+  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
+  
+  \end{outerlist}
+  \vspace{15pt}
+
+  \textbf{Computer Science and Engineering, City, UK}
+  \begin{outerlist}
+  \item[\textbf{\href{https://cit-ai.net}{CitAI, Artificial Intelligence Research Centre}}]
+  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
+  \end{outerlist}
+  \vspace{15pt}
 
 \textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
 \begin{outerlist}
@@ -178,10 +194,10 @@
     \item  Sat on hiring committees for postdoctoral fellows.
   \end{innerlist}
   \end{outerlist}
-  \vspace{10pt}
+  \vspace{15pt}
 
   \textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--2017}
-  \vspace{10pt}
+  \vspace{15pt}
 
   \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
   \begin{outerlist}
@@ -193,7 +209,7 @@
     \item Ran and developed the Block Practical: \href{http://oliviaguest.com/connectionism}{Connectionist Models and Cognitive Processes}.
   \end{innerlist}
 \end{outerlist}
-\vspace{10pt}
+  \vspace{15pt}
 
 \textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
 \begin{outerlist}
@@ -295,10 +311,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \section{INVITED\texorpdfstring{\newline}{ }TALKS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\textbf{Upcoming}: Inria and the Institute of Neurodegenerative Diseases, Bordeaux, France, September 2019; \href{https://openmrbenelux.github.io/}{OpenMR} Benelux, Leiden, The Netherlands, January 2020.
-\vspace{10pt}
-
-\textbf{\href{http://www.rise.org.cy/en-gb/}{Research Centre on Interactive Media, Smart Systems and Emerging Technologies (RISE)}}
+\textbf{\href{http://www.rise.org.cy/en-gb/}{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}}
 \begin{outerlist}
   \item[] \textit{Nicosia, Cyprus}\hfill\textbf{16 Jul 2019}
   \begin{innerlist}
