--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -176,7 +176,7 @@
   \end{outerlist}
   \vspace{15pt}
 
-  \textbf{Computer Science and Engineering, City, UK}
+  \textbf{School of Mathematics, Computer Science and Engineering, City, \newline University of London, UK}
   \begin{outerlist}
   \item[\textbf{\href{https://cit-ai.net}{CitAI, Artificial Intelligence Research Centre}}]
   \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
