Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -262,13 +262,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{PREPRINTS \& UNPUBLISHED}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\textbf{Guest, O.} & Love, B. C. (in prep; invited for special issue).  {Model comparison as an alternative to theory falsification}. \textit{Perspectives on Psychological Science}
+
+
+\textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{American Psychologist}.
 \vspace{7.5pt}
 
-\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (2019; available on request).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Psychological Review}
+
+\#bropenscience is broken science
 \vspace{7.5pt}
 
-\textbf{Guest, O.} & Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. 
+
+\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}.
+\vspace{7.5pt}
+
+Botvinik-Nezer, R. et al. (2019). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams.}  \textit{bioRxiv}. \vspace{7.5pt}
+
+\textbf{Guest, O.} \& Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -395,6 +404,17 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{CONFERENCE \texorpdfstring{\newline}{ } PRESENTATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\textbf{\href{https://www.sfn.org/meetings/neuroscience-2019}{Society for Neuroscience (SfN 2019)}}
+\begin{outerlist}
+  \item[] \textit{Chicago, USA}\hfill\textbf{19--23 Oct 2019}
+  \begin{innerlist}
+    \item Poster: \textit{The neural link between subjective value and decision entropy}.
+    \item{Presented by: S. Bobadilla Suarez}
+  \end{innerlist}
+\end{outerlist}
+\vspace{10pt}
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2019/index.shtml}{18th Annual Summer Interdisciplinary Conference (ASIC 2019)}}
 \begin{outerlist}
@@ -587,7 +607,7 @@ UK}
 \begin{outerlist}
    \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
 
-   \item[\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--}
+   \item[\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor (present); soon-to-be Editor-in-Chief}] \hfill \textbf{2015--}
    
  \item[\textbf{Ad hoc}] \hfill
  
@@ -602,7 +622,8 @@ UK}
  \item[\textbf{General}] \hfill
  \begin{innerlist}
    \item  Web design (e.g., \href{http://bradlove.org}{bradlove.org}, \href{http://neuroplausible.com}{neuroplausible.com}, \href{http://oliviaguest.com}{oliviaguest.com}, \href{http://redistrict.science}{redistrict.science}, \href{http://compcog.science}{compcog.science}).
- \item Graphic design and image editing (i.e., Adobe Suite, GIMP, Inkscape); GUI design (i.e., PyGTK, GTK+).
+ \item Graphic design and image editing (i.e., Adobe Suite, GIMP, Inkscape).
+ \item GUI design (i.e., PyGTK, GTK+).
  \item Artificial neural networks (e.g., TensorFlow).
  \item Unix (e.g., CLI, server administration).
  \end{innerlist}
@@ -611,14 +632,14 @@ UK}
 Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog, Python, R, Scheme, SQL, Visual Basic.
  \end{outerlist}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{LANGUAGES}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-10pt}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \section{LANGUAGES}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \vspace{-10pt}
 
-\begin{description}
- \item[Native:] Modern Greek, Cypriot Greek, English
-  \item[Basic:] French, Italian
- \end{description}
+% \begin{description}
+%  \item[Native:] Modern Greek, Cypriot Greek, English
+%   \item[Basic:] French, Italian
+%  \end{description}
 \end{document}
-%%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
