--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -49,7 +49,7 @@
 
 \usepackage{fancyhdr,lastpage}
 \pagestyle{fancy}
-\pagestyle{empty}      % Uncomment this to get rid of page numbers
+% \pagestyle{empty}      % Uncomment this to get rid of page numbers
 \fancyhf{}\renewcommand{\headrulewidth}{0pt}
 \fancyfootoffset{\marginparsep+\marginparwidth}
 \newlength{\footpageshift}
@@ -211,6 +211,7 @@
 \end{outerlist}
   \vspace{15pt}
 
+\begin{samepage}
 \textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
 \begin{outerlist}
   \item[\textit{Graduate Teaching Assistant}] \hfill \textbf{2010--2014}
@@ -223,6 +224,7 @@
     \item Organised and led the \href{http://cccm.bbk.ac.uk/}{Centre for Cognition, Computation and Modelling}'s  seminar. 
   \end{innerlist}
 \end{outerlist}
+\end{samepage}
 
 
 
@@ -257,7 +259,21 @@
   \item[B.Sc., \href{http://www.cs.york.ac.uk/} {Computer Science},] Jun 2009
 \end{outerlist}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{REVIEWING \& \newline SERVICE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-10pt}
+\begin{outerlist}
+   \item[\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Editor-in-Chief}] \hfill \textbf{2020--}
+   
+   \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
 
+   \item[\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--2020}
+   
+ \item[\textbf{Ad hoc}] \hfill
+ 
+  International Conference on Cognitive Modelling (ICCM), Scientific Computing with Python Conference (SciPy), Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition.
+ \end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{PREPRINTS \& UNPUBLISHED}
@@ -267,8 +283,7 @@
 \textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
 \vspace{7.5pt}
 
-
-\#bropenscience is broken science
+Whitaker, K. J. \& \textbf{Guest, O.} (in press).  {\#bropenscience is broken science}. \textit{The Psychologist}.
 \vspace{7.5pt}
 
 
@@ -339,7 +354,6 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \end{outerlist}
 \vspace{10pt}
 
-\begin{samepage}
 \textbf{\href{http://opendataday.org/}{Open Data Day 2018}}
 \begin{outerlist}
   \item[] \textit{Goldsmiths, University of London, UK}\hfill\textbf{3 Mar 2018}
@@ -348,9 +362,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \end{innerlist}
 \end{outerlist}
 \vspace{10pt}
-\end{samepage}
 
-\begin{samepage}
 \textbf{\href{https://psychology.stanford.edu/events/frisem}{Cognitive Neuroscience Friday Seminar (FriSem)}}
 \begin{outerlist}
   \item[] \textit{Stanford University, California, USA}\hfill\textbf{16 Feb 2018}
@@ -359,10 +371,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \end{innerlist}
 \end{outerlist}
 \vspace{10pt}
-\end{samepage}
 
-
-\begin{samepage}
 \textbf{\href{http://www.ucl.ac.uk/research-it-services/research-software-development/programming-hub/tech-socials}{Research Programming Technical Social}}
 \begin{outerlist}
   \item[] \textit{University College London, UK}\hfill\textbf{15 Nov 2017}
@@ -372,9 +381,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \end{outerlist}
 \vspace{10pt}
 
-\end{samepage}
-
-
+\begin{samepage}
 \textbf{\href{http://www.ru.nl/cls/}{Centre for Language Studies}}
 \begin{outerlist}
   \item[] \textit{Radboud University, The Netherlands}\hfill\textbf{8 Mar 2017}
@@ -383,7 +390,9 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \end{innerlist}
 \end{outerlist}
 \vspace{10pt}
+\end{samepage}
 
+\begin{samepage}
 \textbf{\href{http://ljdm.info}{London Judgement and Decision Making Seminars}}
 \begin{outerlist}
   \item[] \textit{University College London, UK}\hfill\textbf{8 Feb 2017}
@@ -392,6 +401,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \end{innerlist}
 \end{outerlist}
 \vspace{10pt}
+\end{samepage}
 
 \textbf{\href{http://decisions.psy.ox.ac.uk/}{Summerfield Lab}}
 \begin{outerlist}
@@ -600,19 +610,7 @@ UK}
 \end{innerlist}
 \end{outerlist}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{REVIEWING \& \newline SERVICE}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-10pt}
-\begin{outerlist}
-   \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
 
-   \item[\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor (present); soon-to-be Editor-in-Chief}] \hfill \textbf{2015--}
-   
- \item[\textbf{Ad hoc}] \hfill
- 
-  International Conference on Cognitive Modelling (ICCM), Scientific Computing with Python Conference (SciPy), Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition.
- \end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{TECHNICAL\texorpdfstring{\newline}{ }SKILLS}
