Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -278,19 +278,20 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{PREPRINTS \& UNPUBLISHED}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
+\vspace{7.5pt}
+
+\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behaviour}
+\vspace{7.5pt}
+
+Botvinik-Nezer, R. et al. (revise \& resubmit). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams}. \textit{Nature}.
 \vspace{7.5pt}
 
 Whitaker, K. J. \& \textbf{Guest, O.} (in press).  {\#bropenscience is broken science}. \textit{The Psychologist}.
 \vspace{7.5pt}
 
-
-\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}.
+Botvinik-Nezer, R. et al. (2019). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams.}  \textit{bioRxiv}.
 \vspace{7.5pt}
-
-Botvinik-Nezer, R. et al. (2019). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams.}  \textit{bioRxiv}. \vspace{7.5pt}
 
 \textbf{Guest, O.} \& Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. 
 
@@ -403,6 +404,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \vspace{10pt}
 \end{samepage}
 
+\begin{samepage}
 \textbf{\href{http://decisions.psy.ox.ac.uk/}{Summerfield Lab}}
 \begin{outerlist}
   \item[] \textit{University of Oxford, UK}\hfill\textbf{23 Nov 2016}
@@ -410,6 +412,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
     \item \textit{\href{https://figshare.com/articles/What_the_Success_of_Brain_Imaging_Implies_about_the_Neural_Code/4252022}{What the Success of Brain Imaging Implies about the Neural Code}}.
   \end{innerlist}
 \end{outerlist}
+\end{samepage}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{CONFERENCE \texorpdfstring{\newline}{ } PRESENTATIONS}
