Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -281,6 +281,10 @@
 \textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
 \vspace{7.5pt}
 
+Bobadilla Suarez, S., \textbf{Guest, O.} \& Love, B. C. (in prep; available on request).  {The neural link between subjective value and decision entropy}.
+\vspace{7.5pt}
+
+
 \textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behaviour}
 \vspace{7.5pt}
 
