--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -163,6 +163,9 @@
   \begin{outerlist}
   \item[\textbf{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}]
   \item[\textit{Researcher}] \hfill \textbf{2019--}
+  
+%   Carry out independent research on my own as well as in collaboration with other research groups, apply for grants, 
+  
   \end{outerlist}
   
   \vspace{15pt}
@@ -188,15 +191,25 @@
   \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2016--2019}
   
   \begin{innerlist}
-    \item Created computational models: for categorisation, for model-based fMRI, used deep neural networks, etc.
-    \item Mentored Ph.D. and M.Sc. students (CSML and DSML M.Sc.s)
-    \item  Ran training courses for: git, continuous integration, module testing.
+    \item  Created computational models: for categorisation, for model-based fMRI, used deep neural networks, etc.
+    \item  Mentored Ph.D. and M.Sc. students (CSML and DSML M.Sc.s)
+    \item  Organised training courses for: git, continuous integration, module testing.
     \item  Sat on hiring committees for postdoctoral fellows.
+    \item  Marked essays for Cognitive and Decision Sciences M.Sc.
   \end{innerlist}
   \end{outerlist}
   \vspace{15pt}
 
-  \textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--2017}
+  \textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK}
+  \begin{outerlist}
+  \item[\textit{Fellow 2016}] \hfill \textbf{2016--2017}
+  
+  \begin{innerlist}
+    \item    £3,000 grant funding for travel and organising workshops.
+    \item  Organised training courses for: version control (git), Python.
+    \item  Selected new fellows for 2017 and 2018.
+  \end{innerlist}
+  \end{outerlist}
   \vspace{15pt}
 
   \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
@@ -278,7 +291,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{PREPRINTS \& UNPUBLISHED}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
+\vspace{7.5pt}
+
+
+\textbf{Guest, O.} et al. (in prep; for special issue). {Can ``open science'' make science open?}. \textit{Psychology of Women Quarterly}.
 \vspace{7.5pt}
 
 Bobadilla Suarez, S., \textbf{Guest, O.} \& Love, B. C. (in prep; available on request).  {The neural link between subjective value and decision entropy}.
@@ -432,6 +451,9 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \end{innerlist}
 \end{outerlist}
 \vspace{10pt}
+
+
+
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2019/index.shtml}{18th Annual Summer Interdisciplinary Conference (ASIC 2019)}}
 \begin{outerlist}
