--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -273,7 +273,7 @@
 \end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{REVIEWING \& \newline SERVICE}
+\section{REVIEWING \& \protect\newline SERVICE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-10pt}
 \begin{outerlist}
@@ -285,39 +285,10 @@
    
  \item[\textbf{Ad hoc}] \hfill
  
-  International Conference on Cognitive Modelling (ICCM), Scientific Computing with Python Conference (SciPy), Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition.
+  International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition, PLOS Computational Biology.
  \end{outerlist}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PREPRINTS \& UNPUBLISHED}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
-\vspace{7.5pt}
-
-
-\textbf{Guest, O.} et al. (in prep; for special issue). {Can ``open science'' make science open?}. \textit{Psychology of Women Quarterly}.
-\vspace{7.5pt}
-
-Bobadilla Suarez, S., \textbf{Guest, O.} \& Love, B. C. (in prep; available on request).  {The neural link between subjective value and decision entropy}.
-\vspace{7.5pt}
-
-
-\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behaviour}
-\vspace{7.5pt}
-
-Botvinik-Nezer, R. et al. (revise \& resubmit). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams}. \textit{Nature}.
-\vspace{7.5pt}
-
-Whitaker, K. J. \& \textbf{Guest, O.} (in press).  {\#bropenscience is broken science}. \textit{The Psychologist}.
-\vspace{7.5pt}
-
-Botvinik-Nezer, R. et al. (2019). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams.}  \textit{bioRxiv}.
-\vspace{7.5pt}
-
-\textbf{Guest, O.} \& Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. 
-
+ 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{PUBLICATIONS}
@@ -354,10 +325,54 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 
 
 
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{PREPRINTS \& UNPUBLISHED}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\textbf{Guest, O.} \& Martin, A. E. (in prep; invited to special issue).  {How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}.
+\vspace{7.5pt}
+
+
+\textbf{Guest, O.} et al. (in prep; for special issue). {Can ``open science'' make science open?}. \textit{Psychology of Women Quarterly}.
+\vspace{7.5pt}
+
+Bobadilla Suarez, S., \textbf{Guest, O.} \& Love, B. C. (in prep; available on request).  {The neural link between subjective value and decision entropy}.
+\vspace{7.5pt}
+
+
+\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (under review; available on request).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behaviour}
+\vspace{7.5pt}
+
+Botvinik-Nezer, R. et al. (revise \& resubmit). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams}. \textit{Nature}.
+\vspace{7.5pt}
+
+Whitaker, K. J. \& \textbf{Guest, O.} (in press).  {\#bropenscience is broken science}. \textit{The Psychologist}.
+\vspace{7.5pt}
+
+Botvinik-Nezer, R. et al. (2019). \href{https://doi.org/10.1101/843193}{Variability in the analysis of a single neuroimaging dataset by many teams.}  \textit{bioRxiv}.
+\vspace{7.5pt}
+
+\textbf{Guest, O.} \& Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. 
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{INVITED\texorpdfstring{\newline}{ }TALKS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\textbf{\href{}{MathPsych/ICCM 2020}}
+\begin{outerlist}
+  \item[] \textit{Toronto, Canada}\hfill\textbf{25--28 Jul 2020}
+  \begin{innerlist}
+    \item Symposium: \textit{Perspectives on `What makes a good theory?'}
+    \item Organisers: Iris van Rooij, Chris Donkin 
+
+
+  \end{innerlist}
+\end{outerlist}
+\vspace{10pt}
 
 \textbf{\href{http://www.rise.org.cy/en-gb/}{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}}
 \begin{outerlist}
@@ -453,6 +468,15 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \vspace{10pt}
 
 
+
+\textbf{\href{https://www.cancyprus.org/wp-content/uploads/2019/10/Conference-Booklet-2019-print.pdf}{9th Annual Scientific Conference of Center for Applied Neuroscience}}
+\begin{outerlist}
+  \item[] \textit{Nicosia, Cyprus}\hfill\textbf{4 Oct 2019}
+  \begin{innerlist}
+    \item Talk and poster:  \textit{Levels of Representation in a Deep Learning Model of Categorization}.
+  \end{innerlist}
+\end{outerlist}
+\vspace{10pt}
 
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2019/index.shtml}{18th Annual Summer Interdisciplinary Conference (ASIC 2019)}}
